--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,10 @@ dependencies {
 
     //Multidex
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    // Room database
+    implementation "androidx.room:room-runtime:2.4.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    kapt "androidx.room:room-compiler:2.4.0"
+    implementation "androidx.room:room-ktx:2.4.0"
 }
