implemented pdf access from docs and show in pdf viewer (pdf storage not added)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:2.4.0"
     implementation "androidx.room:room-ktx:2.4.0"
+
+    //PDF Viewer
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 }
