--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
 
     //Preference Manager
     implementation 'androidx.preference:preference:1.1.1'
+
+    //Zoom ImageView
+    implementation 'com.jsibbold:zoomage:1.3.1'
 }
