--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,12 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 
     //Preference Manager
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     //Zoom ImageView
     implementation 'com.jsibbold:zoomage:1.3.1'
+
+    //Chart and graph library
+    implementation 'com.github.blackfizz:eazegraph:1.2.5l@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
 }
